remove side-wrapper border-bottom

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,13 +44,11 @@ aside {
     padding: 1.7em;
     color: var(--title-color);
     font-weight: bold;
-    border-bottom: 1px solid var(--border-color);
   }
 }
 
 .side-wrapper {
-  padding: 1.5em 2em;
-  border-bottom: 1px solid var(--border-color);
+  padding: 2em;
 }
 
 .profile {
