--- a/src/App.scss
+++ b/src/App.scss
@@ -295,5 +295,36 @@ header {
 }
 
 .active-folder {
-  padding: 1em 2em;
+  width: 500px;
+
+  .task {
+    display: flex;
+    align-items: center;
+    background-color: var(--unselected-mail);
+    padding: 1.5em;
+
+    &.complete {
+      background-color: var(--theme-bg-color);
+    }
+
+    img {
+      width: 40px;
+      height: 40px;
+    }
+  }
+
+  .title-date-wrapper {
+    flex: 1;
+    margin-left: 1em;
+  }
+
+  .title {
+    font-weight: bold;
+    margin-bottom: 0.5em;
+  }
+
+  .created-at {
+    font-size: 0.8em;
+    color: var(--main-light-color);
+  }
 }
